cmake_minimum_required(VERSION 3.13)
project(untitled)
set(OpenCV_DIR /usr/local/Cellar/opencv@2/2.4.13.7_2/share/OpenCV)
find_package(OpenCV)
#或者find_package(OpenCV3)
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp)
add_executable(untitled ${SOURCE_FILES})
target_link_libraries( untitled ${OpenCV_LIBS} )